<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding = "5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:padding = "5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/summary_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_driver"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/summary_driver_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:text="@string/name_placeholder"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:padding = "5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/summary_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_from"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/summary_from_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:text="@string/exp_long_text"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:padding = "5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/summary_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_to"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/summary_to_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:text="@string/exp_long_text"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:padding = "5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/summary_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_schedule"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/summary_schedule_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:text="@string/exp_long_text"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:padding = "5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/summary_custom_req"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_custom"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/summary_custom_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:text="@string/exp_long_text"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>