<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/history_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id = "@+id/cardview_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop = "10dp"
        android:layout_marginBottom = "10dp"
        android:layout_marginStart = "15dp"
        android:layout_marginEnd = "15dp"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id = "@+id/cc_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clipToPadding="false"
            android:paddingBottom="28dp">

<!--            28dp and 35dp -->

            <TextView
                android:id="@+id/tv_history_driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/name_placeholder"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/view4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout"
                tools:layout_editor_absoluteY="46dp" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:stretchColumns="*"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/tv_history_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/summary_from"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_history_from_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:text="@string/exp_long_text"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/tv_history_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/summary_to"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_history_to_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:text="@string/exp_long_text"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/tv_history_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/summary_schedule"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_history_to_schedule_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:text="@string/exp_date_and_time"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:id = "@+id/tr_custom_request"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tv_history_custom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/summary_custom"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_history_custom_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:text="@string/exp_custom_req"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tv_history_status_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/exp_status"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout"
                app:layout_constraintVertical_bias="0.27" />

            <LinearLayout
                android:id = "@+id/ll_app_dec"
                android:layout_width="0dp"
                android:visibility = "gone"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="3dp"
                android:weightSum="2"
                app:layout_constraintVertical_bias="0.27"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout">


                <Button
                    android:id="@+id/btn_decline"
                    android:layout_marginStart = "15dp"
                    android:layout_marginEnd = "15dp"
                    android:layout_marginBottom = "30dp"
                    android:layout_width="wrap_content"
                    android:textColor = "@color/white"
                    android:textStyle = "bold"
                    android:backgroundTint = "@color/decline_red"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Decline" />

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_marginStart = "15dp"
                    android:layout_marginEnd = "15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle = "bold"
                    android:textColor = "@color/white"
                    android:backgroundTint = "@color/ok_green"
                    android:layout_weight="1"
                    android:text="Accept" />
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>