<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryFragment">

    <TableLayout
        android:visibility = "gone"
        android:id = "@+id/tb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_your"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/choice1"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:checked="false"
                android:gravity="center"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:showText="false"
                android:switchMinWidth="50dp"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:thumb="@drawable/thumb_selector"
                android:track="@drawable/track_selector" />

            <TextView
                android:id="@+id/tv_customer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choice2"
                android:textColor="@color/dark_grey"
                android:textSize="17sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_emp_hist"
        android:layout_width="0dp"
        android:layout_marginStart = "50dp"
        android:layout_marginEnd = "50dp"
        android:layout_marginBottom="50dp"
        android:textSize = "25sp"
        android:textColor = "@color/dark_grey"
        android:lineSpacingExtra="3dp"
        android:textStyle = "italic"
        android:gravity = "center"
        android:layout_height="wrap_content"
        android:text="@string/empty_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb1"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>